testcases/negative/missing-header.otk
DOCTYPE word

AT body/paragraph[1]
SET "Hello"
